--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-management-allyssa",
+  "name": "task-management-shane",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
